apply plugin: 'java'
apply plugin: "com.github.sherter.google-java-format"
apply plugin: 'application'
apply plugin: 'jacoco'

mainClassName = findProperty("main") ?: "com.williamfiset.algorithms.${findProperty("algorithm") ?: 'missingPackage.missingClass'}"

buildscript {
  repositories {
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    // https://github.com/sherter/google-java-format-gradle-plugin
    classpath "gradle.plugin.com.github.sherter.google-java-format:google-java-format-gradle-plugin:0.8"
  }
}
dependencies {
  codeCoverage files("${rootProject.projectDir.path}/lib/jacocoagent.jar")
}
 
test {
  jvmArgs "-javaagent:${configurations.codeCoverage.singleFile}=destfile=${buildDirName}/coverage-results/jacoco.exec,sessionid=HSServ,append=false",
    'Djacoco=true',
    '-Xms128m',
    '-Xmx512m',
    '-XX:MaxPermSize=128m'
}
// Require Java 8
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
  mavenLocal()
  mavenCentral()
}

// Describe all project deps. Use 'testCompile' for test dependencies and
// 'compile' for project dependencies.
dependencies {
  // Apache commons lang
  testCompile 'org.apache.commons:commons-lang3:3.6'

  // JUnit framework
  testCompile 'junit:junit:4.+'

  // JUnit 5 / Jupiter
  testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
   
  // Google Guava lib
  testCompile group: 'com.google.guava', name: 'guava', version: '22.0'

  // Google Truth test framework
  // https://mvnrepository.com/artifact/com.google.truth/truth
  testCompile group: 'com.google.truth', name: 'truth', version: '1.0'

  // Test mocking framework
  testCompile "org.mockito:mockito-core:1.+"
}

test {
  dependsOn cleanTest
  testLogging.showStandardStreams = true
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.compilerArgs += [
    '-Xlint:unchecked',
    '-Xlint:deprecation'
  ]
}

// Options when compiling tests
compileTestJava {
  options.encoding = 'UTF-8'
  options.compilerArgs += [
    '-Xlint:unchecked',
    '-Xlint:deprecation'
  ]
}

task buildDependenciesFolder(type: Copy) {
  from configurations.compile
  into './dependencies'
}
plugins {
  id "org.sonarqube" version "3.3"
}

sonarqube {
  properties {
    property "sonar.projectKey", "Karen1240_Algorithms"
    property "sonar.organization", "karen1240"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}
task generateCoverageReport << {
  ant {
    taskdef(name:'jacocoreport', classname: 'org.jacoco.ant.ReportTask') {
      classpath path: "${rootProject.projectDir.path}/lib/jacocoant.jar"
    }
       
    mkdir dir: "${buildDirName}/reports/coverage"
       
    jacocoreport {
      executiondata {
        fileset(dir: "${buildDirName}/coverage-results") {
          ant.file file: 'jacoco.exec'
        }
      }
           
      structure(name: project.name) {
               
        classfiles {
          fileset dir: "${project.buildDir.path}/classes/main"
        }
        
        // this is for Windows
        sourcefiles(encoding: 'CP1252') {
          fileset dir: "${project.projectDir.path}/src/main/java"
        }
      }
           
      xml  destfile: "${buildDirName}/reports/coverage/jacoco.xml"
      html destdir: "${buildDirName}/reports/coverage"
    }
  }
}
